new cleave method
Took 8 minutes